# hotwallet

./: .env.example  .gitignore  README.md  pyproject.toml
hwallet/: __init__.py
hwallet/application/: __init__.py  account_state.py  hedera_services.py  network_client.py  network_profile.py
hwallet/cli/: app.py  hedera_executor.py  hedera_signer.py  list_accounts.py  register_account.py  wallet_keys.py  wallet_vault.py
hwallet/domain/: __init__.py  key_derivation.py
hwallet/infrastructure/: __init__.py  mirror_node.py  vault_crypto.py
tests/: test_account_state.py  test_application.py  test_cli.py  test_domain.py  test_golden_e2e.py  test_network_client.py  test_network_profile.py  test_vault.py
